--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
         "outDir": "dist",
         "module": "commonjs",
         "target": "es5",
-        "lib": [ "es2015" ],
-        "sourceMap": true,
+        "lib": ["es6", "es2015.promise"],
+        "sourceMap": false,
         "moduleResolution": "node",
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
