Re-organized package to make classed importable and usable after nom install

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,7 @@
         "emitDecoratorMetadata": true,
         "removeComments": true,
         "noImplicitAny": false,
-        "baseUrl": ".",
-        "rootDir": "."
+        "rootDir": "src"
     },
     "exclude": [
         "dist",
